add third activity
add third activity
add button in activity 2 that opens activity 3
add button in activity 3 that opens activity 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="clickBtn_txt">CLICK ME</string>
     <string name="getBack">BACK HOME</string>
     <string name="backHome">BACK HOME</string>
+    <string name="goAway">Go Elsewhere</string>
+    <string name="activity2Head">Another View</string>
+    <string name="activity3Head">Third View</string>
 </resources>
